--- a/index.html
+++ b/index.html
@@ -415,7 +415,9 @@ function update() {
     player1.body.velocity.x = 0;
 	player2.body.velocity.x = 0;
 	player3.body.velocity.x = 0;
-
+	player2.kill();
+	player3.kill();
+	
     /*
 	*	MOVIMIENTO JUGADOR 0
 	*
